# GISMap

./: CMakeLists.txt  README.md  build.sh  setup_database.sql
config/: aircraft.json  application.json  data_sources.json  database.json  map.json
include/: MapWidget.h
include/core/: config.h  geoutil.h  types.h
include/data/: tileloader.h
include/model/: aircraft.h
resources/shapefiles/: vn.json
src/: MapWidget.cpp  main.cpp
src/core/: config.cpp  configmanager.cpp  configmanager.h  geometryobject.cpp  geometryobject.h  geoutil.cpp  viewtransform.cpp  viewtransform.h
src/data/: tileloader.cpp
src/layers/: aircraftlayer.cpp  aircraftlayer.h  maplayer.cpp  maplayer.h
src/managers/: aircraftmanager.cpp  aircraftmanager.h
src/model/: aircraft.cpp
src/models/: aircraft.cpp  aircraft.h  flightroute.cpp  flightroute.h  polygonobject.cpp  polygonobject.h
src/services/: databaseservice.cpp  databaseservice.h
src/ui/: aircraftdialog.cpp  aircraftdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapwidget.cpp  mapwidget.h  polygoneditor.cpp  polygoneditor.h
